# deepnum

./: .gitignore  .travis.yml  Dockerfile  Doxyfile.in  Makefile.am  Makefile.in  README  README.md  README_8md.html  annotated.html  autogen.sh  autosetup.sh  classdeepnum_1_1clarith_1_1Number-members.html  classdeepnum_1_1clarith_1_1Number.html  classdeepnum_1_1clarith_1_1Util-members.html  classdeepnum_1_1clarith_1_1Util.html  classdeepnum_1_1clarith_1_1protocol_1_1ViolationError-members.html  classdeepnum_1_1clarith_1_1protocol_1_1ViolationError.html  classdeepnum_1_1clarith_1_1protocol_1_1ViolationError__coll__graph.md5  classdeepnum_1_1clarith_1_1protocol_1_1ViolationError__inherit__graph.map  classdeepnum_1_1clarith_1_1protocol_1_1ViolationError__inherit__graph.md5  classdeepnum_1_1clarith_1_1protocol_1_1Watcher-members.html  classdeepnum_1_1clarith_1_1protocol_1_1Watcher.html  classdeepnum_1_1clarith_1_1strategy_1_1ExhaustionError-members.html  classdeepnum_1_1clarith_1_1strategy_1_1ExhaustionError.html  classdeepnum_1_1clarith_1_1strategy_1_1ExhaustionError__coll__graph.md5  classdeepnum_1_1clarith_1_1strategy_1_1ExhaustionError__inherit__graph.map  classdeepnum_1_1clarith_1_1strategy_1_1ExhaustionError__inherit__graph.md5  classdeepnum_1_1clarith_1_1strategy_1_1Homography-members.html  classdeepnum_1_1clarith_1_1strategy_1_1Homography.html  classdeepnum_1_1clarith_1_1strategy_1_1Homography__coll__graph.map  classdeepnum_1_1clarith_1_1strategy_1_1Homography__coll__graph.md5  classdeepnum_1_1clarith_1_1strategy_1_1Homography__inherit__graph.md5  classdeepnum_1_1clarith_1_1strategy_1_1Playback-members.html  classdeepnum_1_1clarith_1_1strategy_1_1Playback.html  classdeepnum_1_1clarith_1_1strategy_1_1Playback__coll__graph.map  classdeepnum_1_1clarith_1_1strategy_1_1Playback__coll__graph.md5  classdeepnum_1_1clarith_1_1strategy_1_1Playback__inherit__graph.md5  classdeepnum_1_1clarith_1_1strategy_1_1Ratio-members.html  classdeepnum_1_1clarith_1_1strategy_1_1Ratio.html  (+182 more)
scratch/: RatioTestComparisonMatch-gsl_not_null.gprof  RatioTestComparisonMatch-gsl_owner.gprof  RatioTestComparisonMatch-std_unique_ptr.gprof  homography_composition.txt  profile.sh
search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+20 more)
src/: Makefile.am  Makefile.in  math.cpp  math.hpp  number.cpp  number.hpp  protocol.hpp  reducer.c  reducer.cpp  reducer.hpp  tracelog.h  util.cpp  util.hpp
src/protocol/: protocol.cpp  protocol.hpp  violation_error.cpp  violation_error.hpp  watcher.cpp  watcher.hpp
src/strategy/: exaustion_error.cpp  exaustion_error.hpp  exhaustion_error.cpp  exhaustion_error.hpp  homography.cpp  homography.hpp  infinite.cpp  infinite.hpp  infinity.cpp  infinity.hpp  playback.cpp  playback.hpp  ratio.cpp  ratio.hpp  strategy.hpp  unavailable_error.cpp  unavailable_error.hpp  undefined_ratio_error.cpp  undefined_ratio_error.hpp  zero.cpp  zero.hpp
test/integration/: Makefile.am  homography_test.cpp  integration_tests.cpp  ratio_test.cpp
test/unit/: Makefile.am  number_test.cpp  reducer_test.cpp  unit_tests.cpp
test/unit/protocol/: watcher_test.cpp
test/unit/strategy/: homography_test.cpp  infinite_test.cpp  infinity_test.cpp  playback_test.cpp  ratio_test.cpp  strategy_mock.cpp  strategy_mock.hpp  zero_test.cpp
test/unit/util/: compare_test.cpp
